--- a/css/main.css
+++ b/css/main.css
@@ -55,19 +55,6 @@ section h2 {
     font-weight: 400;
 }
 
-
-/*section ul {
-    list-style: none;
-    display: flex;
-    align-items: flex-start;
-    flex-direction: row;
-}
-
-section li {
-    width: 25%;
-    margin: auto;
-}*/
-
 .whyus h2,
 .manuscriptediting h2,
 .bioinformatics h2,
@@ -94,5 +81,87 @@ section li {
 }
 
 .whyus li .list-content {
-    font-size: 1.5em;
+    font-size: 1em;
+}
+
+.manuscriptediting,
+.bioinformatics,
+.price {
+    margin: 0 40px;
+}
+
+.manuscriptediting ul {
+    list-style: none;
+    padding: 0;
+}
+
+.manuscriptediting .quotas q {
+    font-size: .8em;
+    font-weight: 400;
+}
+
+.manuscriptediting .well {
+    margin-bottom: 5px;
+}
+
+.manuscriptediting .resolution-item {
+    margin-bottom: 20px;
+}
+
+.manuscriptediting .resolution-item div {
+    padding: 5px;
+    border: solid 1px #009688;
+    min-height: 90px;
+    font-size: 1.2em;
+    font-weight: 400;
+}
+
+.bioinformatics ul {
+    list-style: none;
+    padding: 0;
+}
+
+.bio-header {
+    text-align: center;
+    text-transform: capitalize;
+    font-size: 2em;
+    margin: 10px;
+}
+
+ul.bio-content {
+    font-size: 1.2em;
+    margin: 10px;
+    border: solid 1px #009968;
+    padding: 25px;
+}
+
+.bioinformatics li {
+    margin: 10px 0;
+}
+
+.price .tier-container {
+    margin: 80px 0;
+}
+
+.price .tier {
+    border: solid 1px #009688;
+    min-height: 400px;
+}
+
+.price .tier-header {
+    font-size: 2em;
+    font-weight: 400;
+    text-transform: capitalize;
+    text-align: center;
+    margin: 20px;
+}
+
+.price .tier-features {
+    text-transform: lowercase;
+    min-height: 150px;
+}
+
+.price .tier-price {
+    font-size: 3em;
+    text-align: center;
 }
