--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,13 @@ section.header .services {
     justify-content: center;
 }
 
+section.header .logo {
+    width: 40%;
+    height: 40%;
+    display: block;
+    margin: 0 auto;
+}
+
 section h2 {
     text-align: center;
     text-transform: capitalize;
